--- a/app/src/main/res/layout/fragment_assessment_header.xml
+++ b/app/src/main/res/layout/fragment_assessment_header.xml
@@ -2,8 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.scat3.FragmentAssessmentHeader">
+    tools:context="com.example.scat3.AssessmentHeaderFragment">
 
     <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
